--- a/Udemy/Maddo/Web_services_PHP_JSON_Mobile/app/EstudoDeCasoListar/app/src/main/res/layout/content_main.xml
+++ b/Udemy/Maddo/Web_services_PHP_JSON_Mobile/app/EstudoDeCasoListar/app/src/main/res/layout/content_main.xml
@@ -40,39 +40,90 @@
         android:id="@+id/btnDeletarCidade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="49dp"
+        android:layout_marginEnd="9dp"
         android:background="#C4ADF7"
         android:text="DELETAR"
         android:textSize="20sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnAlterarCidade"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnAlterarCidade" />
+
+    <Button
+        android:id="@+id/btnPesquisar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="8dp"
+        android:background="#C4ADF7"
+        android:text="PESQUISAR"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
+        app:layout_constraintEnd_toStartOf="@+id/btnAlterarCidade"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editIdCidade" />
+        app:layout_constraintTop_toBottomOf="@+id/editNomeCidade"
+        app:layout_constraintVertical_bias="0.121" />
+
+    <Button
+        android:id="@+id/btnAlterarCidade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="23dp"
+        android:layout_marginBottom="66dp"
+        android:background="#C4ADF7"
+        android:text="Alterar"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
+        app:layout_constraintEnd_toStartOf="@+id/btnDeletarCidade"
+        app:layout_constraintStart_toEndOf="@+id/btnPesquisar" />
+
 
     <EditText
         android:id="@+id/editIdCidade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="49dp"
-        android:layout_marginEnd="21dp"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="83dp"
+        android:layout_marginBottom="86dp"
         android:ems="10"
         android:hint="ID Cidade"
         android:inputType="number"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/btnListarCidades"
-        app:layout_constraintTop_toBottomOf="@+id/btnListarEstados" />
+        android:textSize="35sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnAlterarCidade"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnListarEstados" />
+
+
+    <EditText
+        android:id="@+id/editNomeCidade"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="24dp"
+        android:ems="10"
+        android:hint="Nome da Cidade"
+        android:inputType="textPersonName"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnAlterarCidade"
+        app:layout_constraintEnd_toEndOf="@+id/editIdCidade"
+        app:layout_constraintStart_toStartOf="@+id/editIdCidade"
+        app:layout_constraintTop_toBottomOf="@+id/editIdCidade" />
 
     <TextView
         android:id="@+id/txtResultado"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="69dp"
+        android:layout_marginTop="368dp"
         android:gravity="center"
         android:textColor="#FF5722"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnDeletarCidade" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
