--- a/Udemy/Maddo/Web_services_PHP_JSON_Mobile/app/EstudoDeCasoListar/app/src/main/res/layout/content_main.xml
+++ b/Udemy/Maddo/Web_services_PHP_JSON_Mobile/app/EstudoDeCasoListar/app/src/main/res/layout/content_main.xml
@@ -9,30 +9,27 @@
     tools:context=".view.MainActivity"
     tools:showIn="@layout/activity_main">
 
-
     <Button
         android:id="@+id/btnListarEstados"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:background="#0FFF07"
         android:text="LISTAR ESTADOS"
         android:textSize="20sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnListarCidades"
-        app:layout_constraintEnd_toStartOf="@+id/btnListarCidades"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnListarCidades"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="13dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="8dp"
         android:background="#C4ADF7"
         android:text="LISTAR CIDADES"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnListarEstados"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,90 +37,99 @@
         android:id="@+id/btnDeletarCidade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="9dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="20dp"
         android:background="#C4ADF7"
         android:text="DELETAR"
         android:textSize="20sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnAlterarCidade"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnAlterarCidade" />
+        app:layout_constraintStart_toEndOf="@+id/btnAlterarCidade"
+        app:layout_constraintTop_toBottomOf="@+id/btnListarCidades" />
 
     <Button
         android:id="@+id/btnPesquisar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:background="#C4ADF7"
         android:text="PESQUISAR"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
-        app:layout_constraintEnd_toStartOf="@+id/btnAlterarCidade"
-        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editNomeCidade"
-        app:layout_constraintVertical_bias="0.121" />
+        app:layout_constraintTop_toBottomOf="@+id/btnListarEstados" />
 
     <Button
         android:id="@+id/btnAlterarCidade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="66dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="20dp"
         android:background="#C4ADF7"
         android:text="Alterar"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
-        app:layout_constraintEnd_toStartOf="@+id/btnDeletarCidade"
-        app:layout_constraintStart_toEndOf="@+id/btnPesquisar" />
+        app:layout_constraintStart_toEndOf="@+id/btnPesquisar"
+        app:layout_constraintTop_toBottomOf="@+id/btnListarEstados" />
+
+    <Button
+        android:id="@+id/btnIncluir"
+        android:layout_width="379dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="#C4ADF7"
+        android:text="INCLUIR NOVA CIDADE"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAlterarCidade" />
 
 
     <EditText
         android:id="@+id/editIdCidade"
-        android:layout_width="350dp"
+        android:layout_width="128dp"
         android:layout_height="60dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="83dp"
-        android:layout_marginBottom="86dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:background="#87DA29"
         android:ems="10"
         android:hint="ID Cidade"
         android:inputType="number"
-        android:textSize="35sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnAlterarCidade"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnListarEstados" />
+        android:textSize="25sp"
+        app:layout_constraintEnd_toStartOf="@+id/editNomeCidade"
+        app:layout_constraintTop_toBottomOf="@+id/btnIncluir" />
 
 
     <EditText
         android:id="@+id/editNomeCidade"
-        android:layout_width="350dp"
+        android:layout_width="216dp"
         android:layout_height="60dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="#87DA29"
         android:ems="10"
         android:hint="Nome da Cidade"
         android:inputType="textPersonName"
-        android:textSize="35sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnAlterarCidade"
-        app:layout_constraintEnd_toEndOf="@+id/editIdCidade"
-        app:layout_constraintStart_toStartOf="@+id/editIdCidade"
-        app:layout_constraintTop_toBottomOf="@+id/editIdCidade" />
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnIncluir" />
 
     <TextView
         android:id="@+id/txtResultado"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="368dp"
+        android:layout_width="344dp"
+        android:layout_height="40dp"
+        android:layout_margin="35dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="8dp"
+        android:background="#A5D7EE"
         android:gravity="center"
         android:textColor="#FF5722"
-        android:textSize="26sp"
+        android:textSize="35sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/editNomeCidade"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
