DesenvolvimentoAndroid: AppListaVip - refactor Layout

--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/layout/activity_main.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textAllCaps="true"
-        android:textSize="24dp"
+        android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,12 +23,12 @@
     <EditText
         android:id="@+id/edtxt_nome"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="72dp"
         android:layout_marginEnd="16dp"
-        android:height="48dp"
         android:ems="10"
+        android:hint="@string/name"
         android:inputType="text"
         android:text="@string/name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,12 +40,12 @@
     <EditText
         android:id="@+id/edtxt_sobrenome"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="16dp"
-        android:height="48dp"
         android:ems="10"
+        android:hint="@string/lastname"
         android:inputType="text"
         android:text="@string/lastname"
         app:layout_constraintEnd_toEndOf="@+id/edtxt_nome"
@@ -55,12 +55,12 @@
     <EditText
         android:id="@+id/edtxt_courseName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="16dp"
-        android:height="48dp"
         android:ems="10"
+        android:hint="@string/courseName"
         android:inputType="text"
         android:text="@string/courseName"
         app:layout_constraintEnd_toEndOf="@+id/edtxt_sobrenome"
@@ -69,14 +69,14 @@
 
 
     <EditText
-        android:id="@+id/edtxt_phone"
+        android:id="@+id/txteditPhone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="16dp"
-        android:height="48dp"
         android:ems="10"
+        android:hint="@string/phone"
         android:inputType="number"
         android:text="@string/phoneNumber"
         app:layout_constraintEnd_toEndOf="@+id/edtxt_courseName"
@@ -84,46 +84,50 @@
         app:layout_constraintTop_toBottomOf="@+id/edtxt_courseName" />
 
     <com.beardedhen.androidbootstrap.BootstrapButton
-        android:id="@+id/bootstrapButton2"
+        android:id="@+id/btnSave"
         android:layout_width="131dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="60dp"
-        android:text="@string/txtclear"
-        android:textStyle="bold"
-        app:bootstrapBrand="warning"
-        app:buttonMode="regular"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtxt_phone"
-        app:layout_constraintVertical_bias="0.397"
-        app:roundedCorners="true" />
-
-    <com.beardedhen.androidbootstrap.BootstrapButton
-        android:id="@+id/bootstrapButton"
-        android:layout_width="131dp"
-        android:layout_height="71dp"
-        android:layout_marginEnd="60dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="64dp"
         android:text="@string/txtSave"
+        android:textAllCaps="true"
         android:textStyle="bold"
         app:bootstrapBrand="success"
         app:buttonMode="regular"
-        app:layout_constraintBottom_toBottomOf="@+id/bootstrapButton2"
+        app:layout_constraintBottom_toBottomOf="@+id/btnLimpar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/bootstrapButton2"
+        app:layout_constraintTop_toTopOf="@+id/btnLimpar"
         app:layout_constraintVertical_bias="1.0"
         app:roundedCorners="true" />
 
     <com.beardedhen.androidbootstrap.BootstrapButton
-        android:layout_width="281dp"
-        android:layout_height="61dp"
-        android:layout_marginBottom="44dp"
+        android:id="@+id/btnLimpar"
+        android:layout_width="131dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="68dp"
+        android:text="@string/txtclear"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        app:bootstrapBrand="warning"
+        app:buttonMode="regular"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txteditPhone"
+        app:roundedCorners="true" />
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/btnFinalizar"
+        android:layout_width="292dp"
+        android:layout_height="62dp"
+        android:layout_marginTop="12dp"
         android:text="@string/txtFinish"
+        android:textAllCaps="true"
         android:textStyle="bold"
         app:bootstrapBrand="primary"
         app:buttonMode="regular"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/bootstrapButton"
-        app:layout_constraintStart_toStartOf="@+id/bootstrapButton2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSave"
         app:roundedCorners="true" />
 
 
