--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/layout/activity_main.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -69,7 +69,7 @@
 
 
     <EditText
-        android:id="@+id/txteditPhone"
+        android:id="@+id/edtxt_phone"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
@@ -111,7 +111,7 @@
         app:bootstrapBrand="warning"
         app:buttonMode="regular"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txteditPhone"
+        app:layout_constraintTop_toBottomOf="@+id/edtxt_phone"
         app:roundedCorners="true" />
 
     <com.beardedhen.androidbootstrap.BootstrapButton
