--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/layout/activity_main.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
-    <TextView android:id="@+id/textView"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
@@ -19,7 +20,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.061" />
 
-    <EditText android:id="@+id/edtxt_firstname"
+    <EditText
+        android:id="@+id/edtxt_firstname"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
@@ -34,7 +36,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <EditText android:id="@+id/edtxt_lastname"
+    <EditText
+        android:id="@+id/edtxt_lastname"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
@@ -48,7 +51,8 @@
         app:layout_constraintStart_toStartOf="@+id/edtxt_firstname"
         app:layout_constraintTop_toBottomOf="@+id/edtxt_firstname" />
 
-    <EditText android:id="@+id/edtxt_courseName"
+    <EditText
+        android:id="@+id/edtxt_courseName"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
@@ -62,7 +66,8 @@
         app:layout_constraintStart_toStartOf="@+id/edtxt_lastname"
         app:layout_constraintTop_toBottomOf="@+id/edtxt_lastname" />
 
-    <EditText android:id="@+id/edtxt_phone"
+    <EditText
+        android:id="@+id/edtxt_phone"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
@@ -76,7 +81,8 @@
         app:layout_constraintStart_toStartOf="@+id/edtxt_courseName"
         app:layout_constraintTop_toBottomOf="@+id/edtxt_courseName" />
 
-    <com.beardedhen.androidbootstrap.BootstrapButton android:id="@+id/btnSave"
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/btnSave"
         android:layout_width="131dp"
         android:layout_height="100dp"
         android:layout_marginEnd="64dp"
@@ -91,7 +97,8 @@
         app:layout_constraintVertical_bias="1.0"
         app:roundedCorners="true" />
 
-    <com.beardedhen.androidbootstrap.BootstrapButton android:id="@+id/btnLimpar"
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/btnLimpar"
         android:layout_width="131dp"
         android:layout_height="100dp"
         android:layout_marginStart="60dp"
@@ -105,7 +112,8 @@
         app:layout_constraintTop_toBottomOf="@+id/edtxt_phone"
         app:roundedCorners="true" />
 
-    <com.beardedhen.androidbootstrap.BootstrapButton android:id="@+id/btnFinalizar"
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/btnFinalizar"
         android:layout_width="292dp"
         android:layout_height="62dp"
         android:layout_marginTop="12dp"
