--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/layout/activity_main.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
         android:id="@+id/btnSave"
         android:layout_width="131dp"
         android:layout_height="100dp"
-        android:layout_marginEnd="64dp"
+        android:layout_marginEnd="56dp"
         android:text="@string/txtSave"
         android:textAllCaps="true"
         android:textStyle="bold"
@@ -98,11 +98,27 @@
         app:roundedCorners="true" />
 
     <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/btnFinalizar"
+        android:layout_width="292dp"
+        android:layout_height="62dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/txtFinish"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        app:bootstrapBrand="primary"
+        app:buttonMode="regular"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSave"
+        app:roundedCorners="true" />
+
+    <com.beardedhen.androidbootstrap.BootstrapButton
         android:id="@+id/btnLimpar"
         android:layout_width="131dp"
         android:layout_height="100dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="136dp"
         android:text="@string/txtclear"
         android:textAllCaps="true"
         android:textStyle="bold"
@@ -112,21 +128,30 @@
         app:layout_constraintTop_toBottomOf="@+id/edtxt_phone"
         app:roundedCorners="true" />
 
-    <com.beardedhen.androidbootstrap.BootstrapButton
-        android:id="@+id/btnFinalizar"
-        android:layout_width="292dp"
-        android:layout_height="62dp"
-        android:layout_marginTop="12dp"
-        android:text="@string/txtFinish"
-        android:textAllCaps="true"
-        android:textStyle="bold"
-        app:bootstrapBrand="primary"
-        app:buttonMode="regular"
+
+    <TextView
+        android:id="@+id/txViewCourseSelection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/selectCourse"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSave"
-        app:roundedCorners="true" />
+        app:layout_constraintTop_toBottomOf="@+id/edtxt_phone" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="44dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnLimpar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.307" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
