--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/layout/activity_main.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/layout/activity_main.xml
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edtxt_phone" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spListNames"
         android:layout_width="409dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
